// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`submit > form is invalid 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <label
          class="uv_f32sl2 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
          for="_r_2_"
        >
          test
        </label>
        <div
          class="uv_dk0fjs8 uv_dk0fjs5"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="uv_dk0fjs9"
            data-size="large"
            id="_r_2_"
            name="toto"
            type="text"
            value="4"
          />
        </div>
      </div>
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`submit > form is submitting 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        <svg
          aria-label="Loading"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="20"
          aria-valuetext="20%"
          class="uv_f8iw982"
          role="progressbar"
          style="height: 1rem; width: 1rem;"
          viewBox="0 0 100 100"
        >
          <circle
            class="uv_f8iw981"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke-width="16"
          />
          <circle
            class="uv_f8iw983"
            cx="50"
            cy="50"
            fill="none"
            r="42"
            stroke="#ffffff"
            stroke-dasharray="263.89378290154264"
            stroke-dashoffset="211.11502632123413"
            stroke-linecap="round"
            stroke-width="16"
          />
        </svg>
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`submit > renders correctly  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <button
        class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m9 uv_1x0t66me uv_1x0t66mi uv_1x0t66ml"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;
